--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -8,16 +8,16 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Hello, world!</title>
+    <title>Práctica 2</title>
   </head>
   <body>
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center my-4">
             <div class="col-4">
-                <img src="images/html.png" width="80%" class="img-thumbnail" alt="Logo normal de HTML">
+                <img src="images/html.png" width="90%" class="img-thumbnail" alt="Logo normal de HTML">
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center my-4">
             <div class="col-4">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo doloremque maiores voluptate amet rerum provident rem reiciendis corrupti quo veniam dignissimos, asperiores expedita magni vitae, placeat, consectetur doloribus! Expedita, ullam.
             </div>
