--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row justify-content-center my-4">
             <div class="col-4">
-                <img src="images/html.png" width="90%" class="img-thumbnail" alt="Logo normal de HTML">
+                <img src="images/html-2.png" width="90%" class="img-thumbnail" alt="Logo normal de HTML">
             </div>
         </div>
         <div class="row justify-content-center my-4">
