--- a/Practica6/index.html
+++ b/Practica6/index.html
@@ -8,12 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Práctica 5: Estrategía Cache With Network fallback</title>
+    <title>Práctica 6: Estrategía primero cache y después Network</title>
   </head>
   <body>
     <div class="container-fluid">
         <div class="mx-auto w-50 h-auto">
-            <h1>Práctica 5: Estrategía Cache With Network fallback</h1>
+            <h1>Práctica 6: Estrategía primero cache y después Network</h1>
             <figure class="figure">
               <img src="https://picsum.photos/id/1000/200/300" alt="Imagen con el id de 1000 picsum" class="figure-img img-fluid rounded">
             </figure>
