--- a/Practica7/pages/offline.html
+++ b/Practica7/pages/offline.html
@@ -63,24 +63,18 @@
     <!-- START CONTENT -->
     <div class="d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-            <h1 class="display-1 fw-bold">404</h1>
+            <h1 class="display-1 fw-bold"><em class="fa-solid fa-cloud-slash"></em></h1>
             <p class="fs-3"> <span class="text-danger">Opps!</span> No cuentas con internet.</p>
             <p class="lead">
                 Verifica tu conexión.
             </p>
-            <a href="/10A-PWA/Practica7/" class="btn btn-primary">Regresa a casa</a>
+            <a href="/10A-PWA/Practica7/" class="btn btn-primary"><em class="fa-solid fa-house-user"></em> Regresa a casa</a>
         </div>
     </div>
     <!-- END CONTENT -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script>
-        const ROOT_PATH = "/10A-PWA/Practica7";
-        
-        if (navigator.serviceWorker) {
-            navigator.serviceWorker.register(`${ROOT_PATH}/sw.js`);
-        }
-    </script>
+    <script src="/10A-PWA/Practica7/js/app.js"></script>
   </body>
 </html>
