--- a/Practica7/pages/recent.html
+++ b/Practica7/pages/recent.html
@@ -101,12 +101,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script>
-        const ROOT_PATH = "/10A-PWA/Practica7";
-
-        if (navigator.serviceWorker) {
-            navigator.serviceWorker.register(`${ROOT_PATH}/sw.js`);
-        }
-    </script>
+    <script type="module" src="/10A-PWA/Practica7/js/app.js"></script>
   </body>
 </html>
