--- a/pouchdb-cero/index.html
+++ b/pouchdb-cero/index.html
@@ -28,7 +28,11 @@
           <label for="inputHours" class="form-label">Hours: </label>
           <input type="text" class="form-control" id="inputHours" >
         </div>
-        <button id="buttonCreate" type="button" class="btn btn-primary">Empezar proceso</button>
+        <button id="buttonCreate" type="button" class="btn btn-primary">Conectar a DB</button>
+        <button id="buttonRegister" type="button" class="btn btn-success">Registrar persona</button>
+        <button id="buttonShowAll" type="button" class="btn btn-info">Mostrar todos</button>
+        <button id="buttonUpdateAll" type="button" class="btn btn-warning">Actualizar todos</button>
+        <button id="buttonDeleteAll" type="button" class="btn btn-danger">Borrar todos</button>
       </form>
     </div>
     <!-- END CONTENT -->
@@ -36,7 +40,6 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/pouchdb@7.3.1/dist/pouchdb.min.js"></script>
-    <script src="/10A-PWA/pouchdb-cero/js/pouchdb-functions.js"></script>
     <script src="/10A-PWA/pouchdb-cero/js/app.js"></script>
   </body>
 </html>
